<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.jandres.deudoresapp.ui.List.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.jandres.deudoresapp.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.jandres.deudoresapp.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/navigation_update"
        android:name="com.jandres.deudoresapp.ui.update.UpdateFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/navigation_delete"
        android:name="com.jandres.deudoresapp.ui.delete.DeleteFragment"
        android:label="@string/title_delete"
        tools:layout="@layout/fragment_delete" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.jandres.deudoresapp.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="debtor"
            app:argType="com.jandres.deudoresapp.data.entities.Debtor" />
    </fragment>
</navigation>